--- a/doc/architecture/architecture.adoc
+++ b/doc/architecture/architecture.adoc
@@ -1,7 +1,7 @@
 = [[entity_root.anchor]]Архітектура Веб-застосунку "Аеропорт"
 :title-page:
 Микитюк Остап
-0.2, 
+0.3, 
 :short-title: Architecture
 :toc:
 :toc-title: Зміст
@@ -18,6 +18,16 @@
 a|15.11.2021
 a|0.1
 a|Додані діаграми об'єктної області, класів та бази даних
+a|Микитюк Остап
+
+a|18.11.2021
+a|0.2
+a|Додана діаграма придатності
+a|Осока Данііл
+
+a|18.11.2021
+a|0.3
+a|Додана діаграма послідовності, оновлена діаграма класів
 a|Микитюк Остап
 
 |=====================================
