[#16] Finish part 1 and 2, start part 3 in manual. Also add tr

--- a/doc/manual/manual.adoc
+++ b/doc/manual/manual.adoc
@@ -10,22 +10,100 @@
 
 = Анотація
 
-В даному документі наведено настанову користувача з експлуатації іфнормаційної системи "Аеропорт". Програмний продукт призначений для спрощення процесу придбання квитків на авіарейси, що обслуговує певний аеропорт.
+В даному документі наведено настанову оператора з експлуатації іфнормаційної системи "Аеропорт". Програмний продукт призначений для спрощення процесу придбання квитків на авіарейси, що обслуговує певний аеропорт.
 
 В даному документі, в розділі <<P1, "Призначення програми">> наведено відомості про призначення програмного продукту та інформація, достатня для розуміння функцій програми та її експлуатації.
 
-В розділі <<P2,"Умови виконання програми">> вказані умови, необхідні для виконання програми (мінімальний склад технічних характеристик, скалд наявного програмного забезпечення тощо).
+В розділі <<P2,"Умови виконання програми">> вказані умови, необхідні для виконання програми (мінімальний склад технічних характеристик, склад наявного програмного забезпечення тощо).
 
-Розділ <<P3, "Виконання програми">> даного документу вказує послідовність дій користувача, шо забезпечують ефективне використання інформаційної системи "Аеропорт". Також в даному розділі наведено опис функціоналу системи.
+Розділ <<P3, "Виконання програми">> даного документу вказує послідовність дій оператора, шо забезпечують ефективне використання інформаційної системи "Аеропорт". Також в даному розділі наведено опис функціоналу системи.
 
-В розділі <<P4, "Повідомлення оператору">> даного документу наведено тексти повідомлень, що можуть бути видані користувачу системи під час взаємодії з нею, опис їх змісту і відповідні дії користувача.
+В розділі <<P4, "Повідомлення оператору">> даного документу наведено тексти повідомлень, що можуть бути видані оператору системи під час взаємодії з нею, опис їх змісту і відповідні дії оператора.
 
 Оформлення даного документу зроблено згідно зі стандартом ГОСТ 19.505–79.
 
 == Призначення програми [[P1]]
 
+=== Функціональне призначення
+
+Підтримка діяльності аеропорту, розповсюдження квитків на авіарейси через Інтернет.
+
+В системі наявні три актора:
+* Неавторизований користувач
+* Авторизований користувач
+* Адміністратор
+
+Для зручності надалі під користувачем буде матися на увазі будь-який з Авторизованого та Неавторизованого користувачів.
+
+==== Функції Неавторизованого користувача
+* Авторизація та реєстрація в системі
+* Пошук та перегляд доступних авіарейсів
+
+==== Функції Авторизованого користувача
+* Пошук та перегляд доступних авіарейсів
+* Придбання або бронювання одного або кількох квитків на авіарейс
+* Перегляд особистої інформації та історії польотів
+* Менеджмент власного акаунту
+
+==== Функції Адміністратора
+* Адміністрування інформації про користувачів
+* Адміністрування інформації про замовлення
+* Адміністрування інформації про авіарейси
+
+=== Експлуатаційне призначення
+
+Система буде експлуатуватися у вільному доступі операторами через браузер з власних пристроїв з доступом в Інтернет. Користувачі зможуть використовувати основний функціонал системи вільно. Заповненням даними про авіарейси будуть займатися адміністратори системи, шо матимуть спеціальний доступ до системи з розширеними правами.
+
 == Умови виконання програми [[P2]]
 
+=== Вимоги до складу та параметрів технічних засобів
+
+Пристрій оператора повинен мати:
+
+* Доступ до інтернету
+* Актуальний веб-браузер (під актуальним мається на увазі браузер версії, що досі підтримується розробниками)
+* оперативну пам’ять обсягом не менше 1 Гб
+* відеокарту, монітор, засоби вводу (миша, клавіатура, тач-скрін тощо)
+
+=== Вимоги до операторів
+
+==== Вимоги до користувача
+
+Особливих вимог немає, інтерфейс користувача є інтуїтивно зрозумілим.
+
+==== Вимоги до адміністратора
+
+Адміністратор має бути ознайомлений з предметною областю інформаційною системи. Також адміністратор системи має підпорядковуватится керівництву аеропорта, в якому запроваджено дану інформаційну систему. Зміни до бази даної системи мають вноситися консистентно зі змінами у внутрішніх системах, каталогах та реєстрах аеропорту, в якому впроваджено інформаційну систему "Аеропорт".
+
 == Виконання програми [[P3]]
+
+=== Виконання інтерфейсу користувача
+
+Інтерфейс користувача доступний за адресою https://shlyahdomrii.tech/
+
+==== Реєстрація та авторизація [[Ref2]]
+
+Неавторизований користувач може пройти реєстрацію або авторизацію натиснувши "**LOGIN OR SIGN UP**" у верхньому меню.
+
+Процедура є інтуїтивно зрозумілою.
+
+==== Функція пошуку та перегляду доступних авіаквитків [[Ref1]]
+
+Потрапляючи на основну сторінку, користавач отримує можливість задати набор фільтрів для пошуку квитків на авіарейси (користувач завжди має можливість потрапити на цю сторінку, натиснувши "**BROWSE FLIGHTS**" у верхньому меню).
+
+Далі користувач отримує список авіарейсів, шо задовольняють умовам заданих фільтрів. 
+
+На кожен результат пощуку можна натиснути, щоб отримати детальну інформаццію про авіарейс.
+
+==== Функція придбання або бронювання квитка
+
+Знаходячись в інтерфейсі перегляду детальної інформації про авіарейс (потрапити в цей інтерфейс можна в результаті виконання пункту <<Ref1>>), користувач може забронювати або придбати онлайн один або кілька авіаквитків, для цього необхідно натиснути "**BUY TICKETS**".
+
+Далі користувач має заповнити форму для уточнення даних замовлення і обрати спосіб оплати (при оплаті онлайн користувач може скористатися накопиченими бонусами для часткової оплати замовлення). В разі оплати онлайн користувач має провести онлайн оплату через інтерфейс, що буде надано в ході реєстрації замовлення. В разі лише бронювання квитка, користувач має оплатити замовлення в будь-якій касі аеропорту.
+
+__Важливо:__ для виконання цієї функції користувач має бути авторизований в системі (пункт <<Ref2>>).
+
+==== Функція перегляду історії польотів
+
 
 == Повідомлення оператору [[P4]]
