add other testing types

--- a/doc/testing/testing.adoc
+++ b/doc/testing/testing.adoc
@@ -7,6 +7,8 @@
 :toclevels: 3
 :sectnums:
 
+:url: https://raw.githubusercontent.com/carexoid/se-lab/doc/test/doc/testing/img/
+
 .Історія змін
 [width="100%", options="header"]
 |=====================================
@@ -25,7 +27,7 @@ a|Цубін Софія
 
 == Тести функцій Веб-застосунку на підтримку критичного варіанту використання AU1. Придбання або бронювання квитка
 
-Вважаємо, що в тестах, що не перевірють авторизованість користувача, користовач є авторизованим.
+Вважаємо, що в тестах, що не перевірють авторизованість користувача, користувач є авторизованим.
 
 .Тести функцій Веб-застосунку на підтримку критичного варіанту використання
 [width="100%", options="header"]
@@ -123,6 +125,81 @@ a|Selenium
 
 === Тестування HTML-коду, каскадних таблиць стилів і Java-скриптів
 
-=== Тестування вигляду Веб-застосунку в передбачених браузерах
+==== HTML-validator
+
+.Валідація головної сторінки
+image::{url}html_validator.png[html1]
+
+.Валідація сторінки Help
+image::{url}html_validator_help.png[html2]
+
+.Валідація сторінки перегляду польоту
+image::{url}html_validator_view.png[html3]
+
+==== CSS-validator
+
+.Валідація головної сторінки
+image::{url}css_validator.png[css1]
+
+.Валідація сторінки Help
+image::{url}css_validator_help.png[css2]
+
+.Валідація сторінки перегляду польоту
+image::{url}css_validator_view.png[css3]
+
+На момент проведення тестування була виявлена одна помилка і усунута в настунпному деплої сайту. В поточній версії сайту вона вже виправлена.
+
+==== Links-validator
+
+.Валідація головної сторінки
+image::{url}links_validator.png[links1]
+
+.Валідація сторінки Help
+image::{url}links_validator_help.png[links2]
+
+.Валідація сторінки перегляду польоту
+image::{url}links_validator_view.png[links3]
+
+=== Тестування вигляду Веб-застосунку в популярних браузерах
+
+.Ubuntu 20.04, Firefox
+image::{url}ubuntu20_firefox.png[uf]
+
+.Ubuntu 20.04, Chrome
+image::{url}ubuntu20_chrome.png[uc]
+
+.Windows 10, Edge
+image::{url}win10_edge.jpg[we]
+
+.Windows 10, Firefox
+image::{url}win10_firefox.jpg[wf]
+
+.Windows 10, Chrome
+image::{url}win10_chrome.jpg[wc]
+
+.Samsung Galaxy S9+, Android 10, Chrome
+image::{url}samsung_chrome.jpg[sac]
+
+.iPad Pro 2016, вертикально
+image::{url}ipad_v.jpg[iv]
+
+.iPad Pro 2016, горизонтально
+image::{url}ipad_h.jpg[ih]
+
+На всіх протестованих пристроях та браузерах веб-сайт відображається та функціонує коректно.
 
 === Навантажувальне тестування, тестування швидкості
+
+==== Швідкість
+
+.Результати тестування швидкості завантаженя сторінки, ресурс https://www.webpagetest.org/
+image::{url}speed1.jpg[sp]
+
+Перше завантаження триває довго через специфіку обраної технології. SPA додатки не вимагають постійних завантажень наступної сторінки з веб сервера; нові сторінки створюються з одного HTML-документа за допомгою динамічно завантажуваних HTML, CSS, JS-скриптів. Завдяки цьому, коли вже завантажена основна частина, переходи між сторінками швидші.
+
+==== Навантаження
+
+.Результати тестування навантаження, ресурс https://loaddy.com
+image::{url}load.jpg[ld]
+
+Отримані результати тестування роботи під навантаженням є задовільними.
