--- a/doc/testing/testing.adoc
+++ b/doc/testing/testing.adoc
@@ -19,6 +19,11 @@ a|0.1
 a|Початкове створення
 a|Цубін Софія
 
+a|8.12.2021
+a|0.2
+a|Додано інші види тестувань
+a|Цубін Софія
+
 |=====================================
 
 == Результати розробки Веб-застосунку
@@ -130,8 +135,12 @@ a|Selenium
 .Валідація головної сторінки
 image::{url}html_validator.png[html1]
 
+{nbsp} +
+
 .Валідація сторінки Help
 image::{url}html_validator_help.png[html2]
+
+{nbsp} +
 
 .Валідація сторінки перегляду польоту
 image::{url}html_validator_view.png[html3]
@@ -141,8 +150,12 @@ image::{url}html_validator_view.png[html3]
 .Валідація головної сторінки
 image::{url}css_validator.png[css1]
 
+{nbsp} +
+
 .Валідація сторінки Help
 image::{url}css_validator_help.png[css2]
+
+{nbsp} +
 
 .Валідація сторінки перегляду польоту
 image::{url}css_validator_view.png[css3]
@@ -154,8 +167,12 @@ image::{url}css_validator_view.png[css3]
 .Валідація головної сторінки
 image::{url}links_validator.png[links1]
 
+{nbsp} +
+
 .Валідація сторінки Help
 image::{url}links_validator_help.png[links2]
+
+{nbsp} +
 
 .Валідація сторінки перегляду польоту
 image::{url}links_validator_view.png[links3]
@@ -165,23 +182,37 @@ image::{url}links_validator_view.png[links3]
 .Ubuntu 20.04, Firefox
 image::{url}ubuntu20_firefox.png[uf]
 
+{nbsp} +
+
 .Ubuntu 20.04, Chrome
 image::{url}ubuntu20_chrome.png[uc]
+
+{nbsp} +
 
 .Windows 10, Edge
 image::{url}win10_edge.jpg[we]
 
+{nbsp} +
+
 .Windows 10, Firefox
 image::{url}win10_firefox.jpg[wf]
+
+{nbsp} +
 
 .Windows 10, Chrome
 image::{url}win10_chrome.jpg[wc]
 
+{nbsp} +
+
 .Samsung Galaxy S9+, Android 10, Chrome
 image::{url}samsung_chrome.jpg[sac]
 
+{nbsp} +
+
 .iPad Pro 2016, вертикально
 image::{url}ipad_v.jpg[iv]
+
+{nbsp} +
 
 .iPad Pro 2016, горизонтально
 image::{url}ipad_h.jpg[ih]
@@ -190,9 +221,9 @@ image::{url}ipad_h.jpg[ih]
 
 === Навантажувальне тестування, тестування швидкості
 
-==== Швідкість
+==== Швидкість
 
-.Результати тестування швидкості завантаженя сторінки, ресурс https://www.webpagetest.org/
+.Результати тестування швидкості завантаження сторінки, ресурс https://www.webpagetest.org/
 image::{url}speed1.jpg[sp]
 
 Перше завантаження триває довго через специфіку обраної технології. SPA додатки не вимагають постійних завантажень наступної сторінки з веб сервера; нові сторінки створюються з одного HTML-документа за допомгою динамічно завантажуваних HTML, CSS, JS-скриптів. Завдяки цьому, коли вже завантажена основна частина, переходи між сторінками швидші.
