--- a/doc/testing/testing.adoc
+++ b/doc/testing/testing.adoc
@@ -160,7 +160,7 @@ image::{url}css_validator_help.png[css2]
 .Валідація сторінки перегляду польоту
 image::{url}css_validator_view.png[css3]
 
-На момент проведення тестування була виявлена одна помилка і усунута в настунпному деплої сайту. В поточній версії сайту вона вже виправлена.
+На момент проведення тестування була виявлена одна помилка і усунута при наступному деплої сайту. В поточній версії сайту вона вже виправлена.
 
 ==== Links-validator
 
