add development results

--- a/doc/testing/testing.adoc
+++ b/doc/testing/testing.adoc
@@ -19,7 +19,7 @@ a|0.1
 a|Початкове створення
 a|Цубін Софія
 
-a|8.12.2021
+a|9.12.2021
 a|0.2
 a|Додано інші види тестувань
 a|Цубін Софія
@@ -29,9 +29,61 @@ a|0.3
 a|Додання опису модульних тестів
 a|Гайдученко Ілля
 
+a|9.12.2021
+a|0.4
+a|Опис результатів розробки Веб-застосунку
+a|Цубін Софія
+
 |=====================================
 
 == Результати розробки Веб-застосунку
+
+=== Фінальна архітектура та використані технології
+
+Мiкросервiсна архiтектура, наявнi сервiси:
+
+* Два сервiси бiзнес-логiки, що оперують даними з БД. Імплементовані мовою Python з використанням фреймворку Flask та надбудови Flask Admin. 
+* Сервiс оплати для обробки платежiв, транзакцiї відбуваються через платiжну систему Stripe.
+* Сервiс аутентифiкацiї оперує даними про користувачiв, що необхiднi для авторизацiї. Авторизація відбувається через JWT, постачальник токенів - GoTrue, віджет авторизації - Netlify. Для розсилки листів підтверждення електронних пошт розгорнуто smtp сервер.
+
+=== Безпека
+
+Доступ до акаунту захищений паролем, використовуються access+refresh токени, відповідно несанкціонований доступ може бути легко деактивований. Всі токени підписуються приватним ключем, неможливо зкомпрометувати токен та дістати інформацію про користувача. Всі приватні ключі, які використовуються сервісами, згенеровані використовуючи криптографічно стійкий генератор випадкових чисел (/dev/urandom). 
+Також, надсилання пошти захищене механізмом SPF та DKIM: листи можуть бути надіслані тільки з однієї IP-адреси,  всі листи підписуються приватним ключем, які сервер-приймач верифікує публічним ключем.
+Панель адміністрації захищена складним паролем.
+З'єднання із сайтом безпечне (HTTPS), використовується TLS-сертифікат, який видав LetsEncrypt.
+
+=== Інтерфейс користувача
+
+Фронтенд імплементований за допомогою фреймворку React та React-бібліотеки компонентів Material-UI.
+
+При розробці інтерфейсу були застосовані як концепції Adaptive Web Design (AWD), так і Responsive Web Design (RWD), однак перевага надавалася AWD.
+
+Також були прийняті до уваги "золоті правила" проектування інтерфейсу. Зокрема: 
+
+* поради щодо валідації форм, формату підказок, розміру полів
+* зворотній зв'язок у вигляді Breadcrumbs
+* адекватне відображення сайту на різних платформах і пристроях 
+* необхідний мінімум об'єктів навігації без переневантажень
+* єдиний стиль оформлення сайту та його елементів
+* візуальне виділення посилань
+
+Особлива увага була приділена дизайну з точки зору образу аеропорту. Великий красивий банер, музична кнопка-сюрприз, футер - усі ці елементи додані з огляду на це. 
+
+=== Деплой та хостинг Веб-застосунку
+
+Для деплою використовується інструмент microk8s, абсолютно всі сервіси, які відзначені в архітектурі, виконуються ізольовано завдяки Docker та технології контейнерезації. Послідовність деплою:
+* розгортаємо базу даних (MySQL);
+* створюємо схему airport та gotrue;
+* створюємо користувачів бази з різними правами, які представлятимуть відповідні сервіси (chief, admin, gotrue);
+* розгортаємо сервіси chief, admin, gotrue, payment;
+* розгортаємо smtp сервер;
+* для сервісу chief виконуємо flask db init, щоб створити потрібні таблиці, для gotrue ініціалізуємо таблиці командою gotrue migrate;
+* опціонально заповнюємо базу аеропорту початковими даними для демонстрації роботи (команда flask db preset в контексті chief);
+* очікуємо, поки всі компоненти перейдуть в статус Running;
+* запускаємо проксі сервер, який відкриває сервер для "світу";
+
+Веб-застосунок знаходиться за посиланням: https://shlyahdomrii.tech
 
 == Модульні тести на підтримку критичного варіанту використання AU1. Придбання або бронювання квитка
 
