add admin panel url

--- a/doc/testing/testing.adoc
+++ b/doc/testing/testing.adoc
@@ -84,6 +84,7 @@ a|Цубін Софія
 * запускаємо проксі сервер, який відкриває сервер для "світу";
 
 Веб-застосунок знаходиться за посиланням: https://shlyahdomrii.tech
+Панель адміністратора: https://shlyahdomrii.tech/admin
 
 == Модульні тести на підтримку критичного варіанту використання AU1. Придбання або бронювання квитка
 
