[#16] Finish version 0.1 of operators maual

--- a/doc/manual/manual.adoc
+++ b/doc/manual/manual.adoc
@@ -8,6 +8,8 @@
 :toclevels: 5
 :sectnums:
 
+:url: https://raw.githubusercontent.com/carexoid/se-lab/doc/manual/doc/manual/img/
+
 = Анотація
 
 В даному документі наведено настанову оператора з експлуатації іфнормаційної системи "Аеропорт". Програмний продукт призначений для спрощення процесу придбання квитків на авіарейси, що обслуговує певний аеропорт.
@@ -29,6 +31,7 @@
 Підтримка діяльності аеропорту, розповсюдження квитків на авіарейси через Інтернет.
 
 В системі наявні три актора:
+
 * Неавторизований користувач
 * Авторизований користувач
 * Адміністратор
@@ -42,13 +45,11 @@
 ==== Функції Авторизованого користувача
 * Пошук та перегляд доступних авіарейсів
 * Придбання або бронювання одного або кількох квитків на авіарейс
-* Перегляд особистої інформації та історії польотів
+* Перегляд історії польотів та накопичених бонусів
 * Менеджмент власного акаунту
 
 ==== Функції Адміністратора
-* Адміністрування інформації про користувачів
-* Адміністрування інформації про замовлення
-* Адміністрування інформації про авіарейси
+* Адміністрування інформації в базі даних системи
 
 === Експлуатаційне призначення
 
@@ -69,7 +70,7 @@
 
 ==== Вимоги до користувача
 
-Особливих вимог немає, інтерфейс користувача є інтуїтивно зрозумілим.
+Особливих вимог немає, інтерфейс користувача є максимально дружнім до оператора і інтуїтивно зрозумілим.
 
 ==== Вимоги до адміністратора
 
@@ -79,13 +80,21 @@
 
 === Виконання інтерфейсу користувача
 
-Інтерфейс користувача доступний за адресою https://shlyahdomrii.tech/
+:auwarning: __Важливо:__ дана функція доступна лише для Авторизованого користувача (для Неавторизованого користувача необхідно спочатку виконати пункт <<Ref2>>).
+
+:nuwarning: __Важливо:__ дана функція доступна лише для Неавторизованого користувача.
+
+Інтерфейс користувача доступний за адресою https://shlyahdomrii.tech
 
 ==== Реєстрація та авторизація [[Ref2]]
 
 Неавторизований користувач може пройти реєстрацію або авторизацію натиснувши "**LOGIN OR SIGN UP**" у верхньому меню.
 
 Процедура є інтуїтивно зрозумілою.
+
+В результаті виконання необхадних дій, Неавторизований користувач стає Авторизованим користувачем.
+
+{nuwarning}
 
 ==== Функція пошуку та перегляду доступних авіаквитків [[Ref1]]
 
@@ -97,13 +106,103 @@
 
 ==== Функція придбання або бронювання квитка
 
-Знаходячись в інтерфейсі перегляду детальної інформації про авіарейс (потрапити в цей інтерфейс можна в результаті виконання пункту <<Ref1>>), користувач може забронювати або придбати онлайн один або кілька авіаквитків, для цього необхідно натиснути "**BUY TICKETS**".
+Знаходячись в інтерфейсі перегляду детальної інформації про авіарейс (потрапити в цей інтерфейс можна в результаті виконання пункту <<Ref1>>), Авторизований користувач може забронювати або придбати онлайн один або кілька авіаквитків, для цього необхідно натиснути "**BUY TICKETS**".
 
-Далі користувач має заповнити форму для уточнення даних замовлення і обрати спосіб оплати (при оплаті онлайн користувач може скористатися накопиченими бонусами для часткової оплати замовлення). В разі оплати онлайн користувач має провести онлайн оплату через інтерфейс, що буде надано в ході реєстрації замовлення. В разі лише бронювання квитка, користувач має оплатити замовлення в будь-якій касі аеропорту.
+Далі Авторизований користувач має заповнити форму для уточнення даних замовлення і обрати спосіб оплати (при оплаті онлайн Авторизований користувач може скористатися накопиченими бонусами для часткової оплати замовлення). В разі оплати онлайн Авторизований користувач має провести онлайн оплату через інтерфейс, що буде надано в ході реєстрації замовлення. В разі лише бронювання квитка, користувач має оплатити замовлення в будь-якій касі аеропорту.
 
-__Важливо:__ для виконання цієї функції користувач має бути авторизований в системі (пункт <<Ref2>>).
+{auwarning}
 
-==== Функція перегляду історії польотів
+==== Функція перегляду історії польотів та накопичених бонусів
 
+Знаходячись в будь-якій частині інтерфейсу Авторизований користувач може перейти до перегляду історії польотів та накопичених бонусів.
+
+Для цього Авторизованому користувачу необхідно натиснути "**MY PROFILE**" у верхньому меню праворуч і у випадаючому меню натиснути "**Order History**". В результаті цих дій, система відобразить Авторизованому користувачу історію його перельотів та інформацію про накопичені бонуси.
+
+{auwarning}
+
+==== Менеджмент власного акаунту
+
+Знаходячись в будь-якій частині інтерфейсу Авторизований користувач може перейти до сторінки менеджменту власного акаунту.
+
+Для цього Авторизованому користувачу необхідно натиснути "**MY PROFILE**" у верхньому меню праворуч і у випадаючому меню натиснути "**Profile Info**". В результаті цих дій, система відобразить Авторизованому користувачу сторінку з його персональними даними.
+
+Авторизований користувач може редагувати свій власний профіль, натиснувши "**EDIT**" під переліком персональних даних.
+
+Авторизований користувач може видалити власний профіль, натиснувши "**DELETE**" під переліком персональних даних. В результаті видалення профілю Авторищований користувач стане Неавторизованим користувачем.
+
+{auwarning}
+
+==== Деавторизація
+
+Знаходячись в будь-якій частині інтерфейсу Авторизований користувач може перейти до сторінки менеджменту власного акаунту.
+
+Для цього Авторизованому користувачу необхідно натиснути "**MY PROFILE**" у верхньому меню праворуч і у випадаючому меню натиснути "**Logout**". В результаті цих дій, Авторизавоний користувач стане Неавторизованим користувачем
+
+Авторизований користувач може редагувати свій власний профіль, натиснувши "**EDIT**" під переліком персональних даних.
+
+{auwarning}
+
+==== Отримання допомоги у використанні системи
+
+Знаходячись в будь-якій частині інтерфейсу користувач може перейти на сторінку з підказками по використанню системи.
+
+Для цього користувачу необхідно натиснути "**HELP**" у верхньому меню. Після натискання користувач опиниться на сторінці з підказками по використанню системи.
+
+==== Отримання контактної інформації
+
+Знаходячись в будь-якій частині інтерфейсу користувач може перейти на сторінку з контактною інформацією.
+
+Для цього користувачу необхідно натиснути "**ABOUT US**" у верхньому меню. Після натискання користувач опиниться на сторінці з контактною інформацією.
+
+=== Виконання інтерфейсу адміністратора
+
+Інтерфейс користувача доступний за адресою https://shlyahdomrii.tech/admin
+
+==== Авторизація
+
+Для використання інтерфейсу адміністратора, Адміністратору необхідно пройти  авторизацію.
+
+Дані для авторизації адміністратору має надати керівництво аеропорту, якому підпорядковується Адміністратор.
+
+==== Функція адміністрації бази даних в системі
+
+Адміністратор має можливість адмініструвати інформацію, наявну в базі даних системи.
+
+Для цього йому необхідно обрати сутність, з якою він хоче взаємодіяти, у верхньому меню інтерфейсу адміністратора. В результаті натискання на назву сутності, що цікавить Адміністратора, останній опиниться на сторінці взаємодії з цією сутністю.
+
+На сторінці взаємодії з сутністю Адміністратор має можливість створити, редагувати або видалити екземпляр сутності (в разі, якщо такі дії дозволені з даною сутністю), також може відфільтрувати список екземплярів за доступними фільтрами.
+
+Для створення необхідно натиснути "**Create**". Адміністратор отримає форму для внесення інформації. Для збереження необхідно натиснути "**Save**".
+
+Для редагування необхідно натиснути зображення олівця навпроти бажаного екземпляру.Адміністратор отримає форму для редагування інформації. Для збереження необхідно натиснути "**Save**".
+
+Для видалення необхідно натиснути зображення сміттєвого баку навпроти бажаного екземпляру. Також можливо видалити кілька екземплярів одразу. Для цього необхідно поставити відмітки навпроти бажаних екземплярів у списку, потім натиснути "**With Selected**" і у випадаючому меню обрати "**Delete**".
+
+Для фільтрації екземплярів необхідно натиснути "**Add Filter**" і задати бажані фільтри.
+
+Детальний інструктаж з приводу передумов виконання дій Адміністратора та їх порядку в певних сценаріях обробки даних має надати керівництво аеропорту, якому підпорядковується Адміністратор.
 
 == Повідомлення оператору [[P4]]
+
+=== Повідомлення про неправильно заповнені поля
+
+Будь-який актор системи, в разі неправильного заповнення поля отримає повідомлення про невірно заповнене поле текстом червоного кольору.
+
+__Причина:__ Невірно заповнене поле при заповнені будь-якої форми.
+
+__Дії програми:__ Система не дає підтвердити обробку заповненої форми.
+
+__Дії оператора:__ Увести коректні дані у поле форми, біля якого виникло повідомлення.
+
+=== Повідомлення Неавторизованому користувачу про необхідність авторизації
+
+При спробі Неавторизованого користувача використати функціонал, доступний тільки для Авторизованих користувачів, перший отримає повіжомлення про необхідність пройти авторизацію.
+
+.Повідомлення про необхідність пройти авторизацію
+image::{url}authorization_required.jpg[authorization required]
+
+__Причина:__ Спроба Неавторизованого користувача використати функціонал призначений тільки для Авторизованих користувачів.
+
+__Дії програми:__ Система не дає використати функціонал призначений тільки для Авторизованих користувачів
+
+__Дії оператора:__ Пройти авторизацію для того щоб стати Авторизованим користувачем.
