[#16] Fix anotation's numeration

--- a/doc/manual/manual.adoc
+++ b/doc/manual/manual.adoc
@@ -10,7 +10,7 @@
 
 :url: https://raw.githubusercontent.com/carexoid/se-lab/doc/manual/doc/manual/img/
 
-= Анотація
+== Анотація
 
 В даному документі наведено настанову оператора з експлуатації іфнормаційної системи "Аеропорт". Програмний продукт призначений для спрощення процесу придбання квитків на авіарейси, що обслуговує певний аеропорт.
 
