[#16] Fix @starquell review issues

--- a/doc/manual/manual.adoc
+++ b/doc/manual/manual.adoc
@@ -80,9 +80,9 @@
 
 === Виконання інтерфейсу користувача
 
-:auwarning: __Важливо:__ дана функція доступна лише для Авторизованого користувача (для Неавторизованого користувача необхідно спочатку виконати пункт <<Ref2>>).
+:auwarning: дана функція доступна лише для Авторизованого користувача (для Неавторизованого користувача необхідно спочатку виконати пункт <<Ref2>>).
 
-:nuwarning: __Важливо:__ дана функція доступна лише для Неавторизованого користувача.
+:nuwarning: дана функція доступна лише для Неавторизованого користувача.
 
 Інтерфейс користувача доступний за адресою https://shlyahdomrii.tech
 
@@ -94,7 +94,7 @@
 
 В результаті виконання необхадних дій, Неавторизований користувач стає Авторизованим користувачем.
 
-{nuwarning}
+__Важливо:__ {nuwarning}
 
 ==== Функція пошуку та перегляду доступних авіаквитків [[Ref1]]
 
@@ -110,7 +110,7 @@
 
 Далі Авторизований користувач має заповнити форму для уточнення даних замовлення і обрати спосіб оплати (при оплаті онлайн Авторизований користувач може скористатися накопиченими бонусами для часткової оплати замовлення). В разі оплати онлайн Авторизований користувач має провести онлайн оплату через інтерфейс, що буде надано в ході реєстрації замовлення. В разі лише бронювання квитка, користувач має оплатити замовлення в будь-якій касі аеропорту.
 
-{auwarning}
+__Важливо:__ {auwarning}
 
 ==== Функція перегляду історії польотів та накопичених бонусів
 
@@ -118,7 +118,7 @@
 
 Для цього Авторизованому користувачу необхідно натиснути "**MY PROFILE**" у верхньому меню праворуч і у випадаючому меню натиснути "**Order History**". В результаті цих дій, система відобразить Авторизованому користувачу історію його перельотів та інформацію про накопичені бонуси.
 
-{auwarning}
+__Важливо:__ {auwarning}
 
 ==== Менеджмент власного акаунту
 
@@ -130,7 +130,7 @@
 
 Авторизований користувач може видалити власний профіль, натиснувши "**DELETE**" під переліком персональних даних. В результаті видалення профілю Авторищований користувач стане Неавторизованим користувачем.
 
-{auwarning}
+__Важливо:__ {auwarning}
 
 ==== Деавторизація
 
@@ -140,7 +140,7 @@
 
 Авторизований користувач може редагувати свій власний профіль, натиснувши "**EDIT**" під переліком персональних даних.
 
-{auwarning}
+__Важливо:__ {auwarning}
 
 ==== Отримання допомоги у використанні системи
 
